[package]
name = "tower-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
license.workspace = true
authors.workspace = true
description = "Composable resilience and fault-tolerance middleware for Tower services"
repository.workspace = true
keywords = ["tower", "resilience", "circuit-breaker", "bulkhead", "middleware"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Core is always included
tower-resilience-core = { workspace = true }

# Optional pattern dependencies
tower-resilience-circuitbreaker = { version = "0.7.0", path = "../tower-resilience-circuitbreaker", optional = true }
tower-resilience-bulkhead = { version = "0.7.0", path = "../tower-resilience-bulkhead", optional = true }
tower-resilience-timelimiter = { version = "0.7.0", path = "../tower-resilience-timelimiter", optional = true }
tower-resilience-cache = { version = "0.7.0", path = "../tower-resilience-cache", optional = true }
tower-resilience-retry = { version = "0.7.0", path = "../tower-resilience-retry", optional = true }
tower-resilience-ratelimiter = { version = "0.7.0", path = "../tower-resilience-ratelimiter", optional = true }
tower-resilience-reconnect = { version = "0.7.0", path = "../tower-resilience-reconnect", optional = true }
tower-resilience-healthcheck = { version = "0.7.0", path = "../tower-resilience-healthcheck", optional = true }
tower-resilience-fallback = { version = "0.7.0", path = "../tower-resilience-fallback", optional = true }
tower-resilience-hedge = { version = "0.7.0", path = "../tower-resilience-hedge", optional = true }
tower-resilience-executor = { version = "0.7.0", path = "../tower-resilience-executor", optional = true }
tower-resilience-adaptive = { version = "0.7.0", path = "../tower-resilience-adaptive", optional = true }
tower-resilience-coalesce = { version = "0.7.0", path = "../tower-resilience-coalesce", optional = true }

[features]
default = []
# Individual patterns
circuitbreaker = ["dep:tower-resilience-circuitbreaker"]
bulkhead = ["dep:tower-resilience-bulkhead"]
timelimiter = ["dep:tower-resilience-timelimiter"]
cache = ["dep:tower-resilience-cache"]
retry = ["dep:tower-resilience-retry"]
ratelimiter = ["dep:tower-resilience-ratelimiter"]
reconnect = ["dep:tower-resilience-reconnect"]
healthcheck = ["dep:tower-resilience-healthcheck"]
fallback = ["dep:tower-resilience-fallback"]
hedge = ["dep:tower-resilience-hedge"]
executor = ["dep:tower-resilience-executor"]
adaptive = ["dep:tower-resilience-adaptive"]
coalesce = ["dep:tower-resilience-coalesce"]
# Enable all patterns
full = ["circuitbreaker", "bulkhead", "timelimiter", "cache", "retry", "ratelimiter", "reconnect", "healthcheck", "fallback", "hedge", "executor", "adaptive", "coalesce"]
# Health check and circuit breaker integration
health-circuitbreaker = [
    "healthcheck",
    "circuitbreaker",
    "tower-resilience-healthcheck/triggers",
    "tower-resilience-circuitbreaker/health-integration"
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "combined"
required-features = ["circuitbreaker", "bulkhead"]

[[example]]
name = "full_stack"
required-features = ["full"]
