[package]
name = "tower-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
license.workspace = true
authors.workspace = true
description = "Composable resilience and fault-tolerance middleware for Tower services"
repository.workspace = true
keywords = ["tower", "resilience", "circuit-breaker", "bulkhead", "middleware"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Core is always included
tower-resilience-core = { workspace = true }

# Optional pattern dependencies
tower-resilience-circuitbreaker = { version = "0.7.1", path = "../tower-resilience-circuitbreaker", optional = true }
tower-resilience-bulkhead = { version = "0.7.1", path = "../tower-resilience-bulkhead", optional = true }
tower-resilience-timelimiter = { version = "0.7.1", path = "../tower-resilience-timelimiter", optional = true }
tower-resilience-cache = { version = "0.7.1", path = "../tower-resilience-cache", optional = true }
tower-resilience-retry = { version = "0.7.1", path = "../tower-resilience-retry", optional = true }
tower-resilience-ratelimiter = { version = "0.7.1", path = "../tower-resilience-ratelimiter", optional = true }
tower-resilience-reconnect = { version = "0.7.1", path = "../tower-resilience-reconnect", optional = true }
tower-resilience-healthcheck = { version = "0.7.1", path = "../tower-resilience-healthcheck", optional = true }
tower-resilience-fallback = { version = "0.7.1", path = "../tower-resilience-fallback", optional = true }
tower-resilience-hedge = { version = "0.7.1", path = "../tower-resilience-hedge", optional = true }
tower-resilience-executor = { version = "0.7.1", path = "../tower-resilience-executor", optional = true }
tower-resilience-adaptive = { version = "0.7.1", path = "../tower-resilience-adaptive", optional = true }
tower-resilience-coalesce = { version = "0.7.1", path = "../tower-resilience-coalesce", optional = true }

[features]
default = []

# Resilience patterns - enable the ones you need
# Circuit breaker: prevent cascading failures by stopping calls to failing services
circuitbreaker = ["dep:tower-resilience-circuitbreaker"]
# Bulkhead: isolate resources with concurrency limits
bulkhead = ["dep:tower-resilience-bulkhead"]
# Time limiter: enforce timeouts with cancellation support
timelimiter = ["dep:tower-resilience-timelimiter"]
# Cache: response memoization to reduce load
cache = ["dep:tower-resilience-cache"]
# Retry: automatic retries with exponential backoff and jitter
retry = ["dep:tower-resilience-retry"]
# Rate limiter: control request rate with fixed or sliding windows
ratelimiter = ["dep:tower-resilience-ratelimiter"]
# Reconnect: automatic reconnection with configurable backoff
reconnect = ["dep:tower-resilience-reconnect"]
# Health check: proactive health monitoring with resource selection
healthcheck = ["dep:tower-resilience-healthcheck"]
# Fallback: provide alternative responses when services fail
fallback = ["dep:tower-resilience-fallback"]
# Hedge: reduce tail latency by racing parallel requests
hedge = ["dep:tower-resilience-hedge"]
# Executor: delegate processing to dedicated thread pools
executor = ["dep:tower-resilience-executor"]
# Adaptive: dynamic concurrency limiting (AIMD/Vegas algorithms)
adaptive = ["dep:tower-resilience-adaptive"]
# Coalesce: deduplicate concurrent identical requests (singleflight)
coalesce = ["dep:tower-resilience-coalesce"]

# Enable all patterns at once
full = ["circuitbreaker", "bulkhead", "timelimiter", "cache", "retry", "ratelimiter", "reconnect", "healthcheck", "fallback", "hedge", "executor", "adaptive", "coalesce"]

# Integration: health checks can proactively open/close circuit breakers
health-circuitbreaker = [
    "healthcheck",
    "circuitbreaker",
    "tower-resilience-healthcheck/triggers",
    "tower-resilience-circuitbreaker/health-integration"
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "combined"
required-features = ["circuitbreaker", "bulkhead"]

[[example]]
name = "full_stack"
required-features = ["full"]
