[package]
name = "tower-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
license.workspace = true
authors.workspace = true
description = "Composable resilience and fault-tolerance middleware for Tower services"
repository.workspace = true
keywords = ["tower", "resilience", "circuit-breaker", "bulkhead", "middleware"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Core is always included
tower-resilience-core = { workspace = true }

# Optional pattern dependencies (alphabetical)
tower-resilience-adaptive = { version = "0.10.0", path = "../tower-resilience-adaptive", optional = true }
tower-resilience-bulkhead = { version = "0.10.0", path = "../tower-resilience-bulkhead", optional = true }
tower-resilience-cache = { version = "0.10.0", path = "../tower-resilience-cache", optional = true }
tower-resilience-chaos = { version = "0.10.0", path = "../tower-resilience-chaos", optional = true }
tower-resilience-circuitbreaker = { version = "0.10.0", path = "../tower-resilience-circuitbreaker", optional = true }
tower-resilience-coalesce = { version = "0.10.0", path = "../tower-resilience-coalesce", optional = true }
tower-resilience-executor = { version = "0.10.0", path = "../tower-resilience-executor", optional = true }
tower-resilience-fallback = { version = "0.10.0", path = "../tower-resilience-fallback", optional = true }
tower-resilience-hedge = { version = "0.10.0", path = "../tower-resilience-hedge", optional = true }
tower-resilience-healthcheck = { version = "0.10.0", path = "../tower-resilience-healthcheck", optional = true }
tower-resilience-outlier = { version = "0.10.0", path = "../tower-resilience-outlier", optional = true }
tower-resilience-ratelimiter = { version = "0.10.0", path = "../tower-resilience-ratelimiter", optional = true }
tower-resilience-reconnect = { version = "0.10.0", path = "../tower-resilience-reconnect", optional = true }
tower-resilience-retry = { version = "0.10.0", path = "../tower-resilience-retry", optional = true }
tower-resilience-router = { version = "0.10.0", path = "../tower-resilience-router", optional = true }
tower-resilience-timelimiter = { version = "0.10.0", path = "../tower-resilience-timelimiter", optional = true }

[features]
default = []

# Resilience patterns - enable the ones you need (alphabetical)
# Adaptive: dynamic concurrency limiting (AIMD/Vegas algorithms)
adaptive = ["dep:tower-resilience-adaptive"]
# Bulkhead: isolate resources with concurrency limits
bulkhead = ["dep:tower-resilience-bulkhead"]
# Cache: response memoization to reduce load
cache = ["dep:tower-resilience-cache"]
# Chaos: inject failures and latency for testing resilience
chaos = ["dep:tower-resilience-chaos"]
# Circuit breaker: prevent cascading failures by stopping calls to failing services
circuitbreaker = ["dep:tower-resilience-circuitbreaker"]
# Coalesce: deduplicate concurrent identical requests (singleflight)
coalesce = ["dep:tower-resilience-coalesce"]
# Executor: delegate processing to dedicated thread pools
executor = ["dep:tower-resilience-executor"]
# Fallback: provide alternative responses when services fail
fallback = ["dep:tower-resilience-fallback"]
# Hedge: reduce tail latency by racing parallel requests
hedge = ["dep:tower-resilience-hedge"]
# Health check: proactive health monitoring with resource selection
healthcheck = ["dep:tower-resilience-healthcheck"]
# Unified error layer: compose multiple resilience layers with a single error type
layer = ["tower-resilience-core/layer"]
# Outlier detection: fleet-aware instance ejection based on health tracking
outlier = ["dep:tower-resilience-outlier"]
# Rate limiter: control request rate with fixed or sliding windows
ratelimiter = ["dep:tower-resilience-ratelimiter"]
# Reconnect: automatic reconnection with configurable backoff
reconnect = ["dep:tower-resilience-reconnect"]
# Retry: automatic retries with exponential backoff and jitter
retry = ["dep:tower-resilience-retry"]
# Router: weighted traffic routing for canary deployments and progressive rollout
router = ["dep:tower-resilience-router"]
# Time limiter: enforce timeouts with cancellation support
timelimiter = ["dep:tower-resilience-timelimiter"]

# Observability: enable Prometheus metrics on every enabled pattern.
# Uses weak dependency syntax (`dep?/feature`) so this feature only activates
# metrics on patterns the user has already enabled -- it does not pull in any
# pattern on its own. healthcheck is intentionally omitted: it has no metrics
# feature.
metrics = [
    "tower-resilience-adaptive?/metrics",
    "tower-resilience-bulkhead?/metrics",
    "tower-resilience-cache?/metrics",
    "tower-resilience-chaos?/metrics",
    "tower-resilience-circuitbreaker?/metrics",
    "tower-resilience-coalesce?/metrics",
    "tower-resilience-executor?/metrics",
    "tower-resilience-fallback?/metrics",
    "tower-resilience-hedge?/metrics",
    "tower-resilience-outlier?/metrics",
    "tower-resilience-ratelimiter?/metrics",
    "tower-resilience-reconnect?/metrics",
    "tower-resilience-retry?/metrics",
    "tower-resilience-router?/metrics",
    "tower-resilience-timelimiter?/metrics",
]
# Observability: enable distributed tracing on every enabled pattern.
# Uses weak dependency syntax (`dep?/feature`) so this feature only activates
# tracing on patterns the user has already enabled -- it does not pull in any
# pattern on its own.
tracing = [
    "tower-resilience-adaptive?/tracing",
    "tower-resilience-bulkhead?/tracing",
    "tower-resilience-cache?/tracing",
    "tower-resilience-chaos?/tracing",
    "tower-resilience-circuitbreaker?/tracing",
    "tower-resilience-coalesce?/tracing",
    "tower-resilience-executor?/tracing",
    "tower-resilience-fallback?/tracing",
    "tower-resilience-hedge?/tracing",
    "tower-resilience-healthcheck?/tracing",
    "tower-resilience-outlier?/tracing",
    "tower-resilience-ratelimiter?/tracing",
    "tower-resilience-reconnect?/tracing",
    "tower-resilience-retry?/tracing",
    "tower-resilience-router?/tracing",
    "tower-resilience-timelimiter?/tracing",
]

# Enable all patterns at once (plus observability)
full = ["adaptive", "bulkhead", "cache", "chaos", "circuitbreaker", "coalesce", "executor", "fallback", "hedge", "healthcheck", "layer", "outlier", "ratelimiter", "reconnect", "retry", "router", "timelimiter", "metrics", "tracing"]

# Integration: health checks can proactively open/close circuit breakers
health-circuitbreaker = [
    "healthcheck",
    "circuitbreaker",
    "tower-resilience-healthcheck/triggers",
    "tower-resilience-circuitbreaker/health-integration"
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "combined"
required-features = ["circuitbreaker", "bulkhead"]

[[example]]
name = "full_stack"
required-features = ["full"]
