[package]
name = "axum-resilient-kv-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Axum web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"

# Tower resilience patterns
tower-resilience-circuitbreaker = { path = "../../crates/tower-resilience-circuitbreaker", features = ["serde", "tracing"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
